service-peccy-app/overlays/tyoko/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-peccy-app
  labels:
    app: service-peccy-app
spec:
  template:
    spec:
      containers:
      - name: service-peccy-app
        image: 727618787612.dkr.ecr.ap-northeast-1.amazonaws.com/eks-cicd-dr_service-peccy-app:commit-0abd52a1cbb450ef795979500067e78aa19a8db2
