service-peccy-app/overlays/tyoko/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-peccy-app
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: service-peccy-web-secondary
    external-dns.alpha.kubernetes.io/aws-failover: SECONDARY
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:727618787612:certificate/043ffa30-3d8a-42c4-ae51-566594fe6787
